# erlrc

./: .gitignore  .travis.yml  ChangeLog  Makefile.am.local  TODO  bootstrap  configure.ac.local
doc/: .gitignore
fw-pkgin/: config
src/: .gitignore  Makefile.am.local  erlrc-hooks  erlrc.app.src  erlrc.erl  erlrc_boot.erl  erlrc_lib.erl  erlrcdynamic.erl
test/: .gitignore  Makefile.am  test-boot.pl  test-downgrade  test-start  test-stop  test-upgrade
tests/: .gitignore  Makefile.am.local  erlrc_boot_test.erl  test-boot.pl
